<resources>
    <string name="app_name">Health Meter</string>
    <string name="action_settings">Settings</string>
    <string name="action_log_out">Log Out</string>
    <string name="action_feedback">Send feedback</string>
    <string name="tab_overview">Overview</string>
    <string name="tab_history">History</string>
    <string name="tab_scan">Food Facts</string>
    <string name="action_invite">Invite a friend</string>
    <string name="tab_tips">Tips</string>
    <string name="title_activity_hello">Login</string>
    <string name="helloactivity_headline">Login</string>
    <string name="helloactivity_terms">Terms of usage.</string>
    <string name="helloactivity_terms_accept">I\'ve read and accept the terms of usage</string>
    <string name="helloactivity_terms_full">The contents of the Health Meter website and apps, such as text, graphics, images, and other material (“Content”) are for informational purposes only. The content is not intended to be a substitute for professional medical advice, diagnosis, or treatment. We encourage Health Meter users to always seek the advice of your physician or other qualified health provider with any questions you may have regarding a medical condition. Never disregard professional medical advice or delay in seeking it because of something you have read on the Health Meter website or in our apps. The Health Meter Website, Blog, Wiki and other web browser accessible content (“Website”) should be used only for the purpose described above.\n Reliance on any information provided by Health Meter, Health Meter team members, volunteers and others appearing on the Website or in our apps is solely at your own risk.  The Site and the Content are provided on an “as is” basis.</string>
    <string name="helloactivity_subhead">Please enter your Login credentials.</string>
    <string name="helloactivity_username">Username</string>
    <string name="action_contacts">My Contacts</string>
    <string name="hello_world">Hello world!</string>
    <string name="hint_fname">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="register_title">Register</string>
    <string name="login_title">Login</string>
    <string name="Profile_title">Profile</string>
    <string name="EditProfile_title">Edit Profile</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="email">Email</string>
    <string name="pwd">Password</string>
    <string name="phone">Phone </string>
    <string name="streetAddress">Street Address </string>
    <string name="state">State </string>
    <string name="city">City </string>
    <string name="zipcode">zipcode </string>
    <string name="btnRegister">Register</string>
    <string name="soyabean">Soyabean</string>
    <string name="milk">Milk</string>
    <string name="gluten">Gluten </string>
    <string name="egg">Egg </string>
    <string name="mustard">Mustard </string>
    <string name="peanuts">Peanuts </string>
    <string name="fish">Fish </string>
    <string name="nuts">Nuts</string>
    <string name="coconut">Coconut</string>
    <string name="seasmeSeeds">Seasme Seeds </string>
    <string name="corn">Corn </string>
    <string name="flour">Flour </string>
    <string name="wheyPowder">Whey Powder </string>
    <string name="cornStarch">Corn Starch </string>
    <string name="celery">Celery </string>
    <string name="candelnut">candelnut </string>
    <string name="diabetes">Diabetes</string>
    <string name="bloodPressure">Blood Pressure</string>
    <string name="scanner_activity">Full Activity</string>
    <string name="scanner_fragment_activity">Scanner - Full Fragment Activity</string>
    <string name="simple_scanner_activity">Scanner - Simple Activity</string>
    <string name="simple_scanner_fragment_activity">Scanner - Simple Fragment Activity</string>
    <string name="simple_activity_sample">Simple Activity Sample</string>
    <string name="simple_fragment_sample">Simple Fragment Sample</string>
    <string name="activity_sample">Eat Food</string>
    <string name="fragment_sample">Full Fragment Sample</string>
    <string name="toggle_flash">Flash</string>
    <string name="flash_on">Flash [ON]</string>
    <string name="flash_off">Flash [OFF]</string>
    <string name="auto_focus_on">Auto Focus [ON]</string>
    <string name="auto_focus_off">Auto Focus [OFF]</string>
    <string name="formats">Formats</string>
    <string name="choose_formats">Choose Formats</string>
    <string name="select_camera">Select a Camera</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="title_activity_login">Barcode Generate</string>
    <string name="title_activity_bluetooth">Bluetooth Generation</string>
    <string name="title_activity_scanner">ScannerActivity</string>
    <string name="title_activity_view_for_scanner">ViewForScannerActivity</string>
    <string name="title_activity_preferences">PreferencesActivity</string>
    <string name="title_activity_licence">LicenceActivity</string>
    <string name="title_activity_assistant_adapter">AssistantAdapter</string>
    <string name="title_activity_sensor_tag">SensorTagActivity</string>
    <string name="helloactivity_email">Email</string>
    <string name="foodFacts">Your FoodFacts</string>
    <string name="foodAllergicInfo">Food Allergic Information</string>
    <string name="foodDiseaseInfo">Food and Disease related information</string>
    <string name="nutritionInfo">Nutrition Information</string>
    <string name="productName">Product</string>
    <string name="patientAllergy">Allergies you have are</string>
    <string-array name="helloactivity_language_list">
        <item>English (US)</item>
        <item>Spanish</item>
        <item>German</item>
        <item>French</item>
        <item>Italian</item>
        <item>Hindi</item>
        <item>Albanian</item>
        <item>Romanian</item>
    </string-array>
    <string name="helloactivity_password">Password</string>
    <string name="helloactivity_password_invalid">Please enter a valid age.</string>
    <string name="helloactivity_country">Country</string>
    <string name="helloactivity_age">Age</string>
    <string name="helloactivity_age_invalid">Please enter a valid age.</string>
    <string name="helloactivity_gender">Gender</string>
    <string name="helloactivity_gender_list_1">Male</string>
    <string name="helloactivity_gender_list_2">Female</string>
    <string name="helloactivity_gender_list_3">Other</string>
    <string-array name="helloactivity_gender_list">
        <item>@string/helloactivity_gender_list_1</item>
        <item>@string/helloactivity_gender_list_2</item>
        <item>@string/helloactivity_gender_list_3</item>
    </string-array>
    <string name="helloactivity_spinner_diabetes_type">Diabetes type</string>
    <string name="helloactivity_spinner_diabetes_type_1">Type 1</string>
    <string name="helloactivity_spinner_diabetes_type_2">Type 2</string>
    <string-array name="helloactivity_diabetes_type" translatable="false">
        <item>@string/helloactivity_spinner_diabetes_type_1</item>
        <item>@string/helloactivity_spinner_diabetes_type_2</item>
    </string-array>
    <string name="helloactivity_spinner_preferred_unit">Preferred unit</string>
    <string name="helloactivity_spinner_preferred_unit_1">mg/dL</string>
    <string name="helloactivity_spinner_preferred_unit_2">mmol/L</string>
    <string-array name="helloactivity_preferred_unit">
        <item>@string/helloactivity_spinner_preferred_unit_1</item>
        <item>@string/helloactivity_spinner_preferred_unit_2</item>
    </string-array>
    <string name="helloactivity_share_data">Share anonymous data for research.</string>
    <string name="helloactivity_hint_settings">You can change these in settings later.</string>
    <string name="helloactivity_button_next_login">Login</string>
    <string name="helloactivity_button_start">GET STARTED</string>
    <string name="fragment_empty_text">No info available yet. \n Add your first reading here.</string>
    <string name="dialog_add_title">Add Blood Glucose Level</string>
    <string name="dialog_add_concentration">Concentration</string>
    <string name="dialog_add_concentration_um" translatable="false">mg/dL</string>
    <string name="dialog_add_date">Date</string>
    <string name="dialog_add_time">Time</string>
    <string name="dialog_add_measured">Measured</string>
    <string name="dialog_add_type_1">Before breakfast</string>
    <string name="dialog_add_type_2">After breakfast</string>
    <string name="dialog_add_type_3">Before lunch</string>
    <string name="dialog_add_type_4">After lunch</string>
    <string name="dialog_add_type_5">Before dinner</string>
    <string name="dialog_add_type_6">After dinner</string>
    <string name="dialog_add_type_7">Snack</string>
    <string name="dialog_add_type_8">Bedtime</string>
    <string name="dialog_add_type_9">Night</string>
    <string name="dialog_add_type_10">Fasting glucose</string>
    <string name="dialog_add_type_11">Recheck</string>
    <string name="dialog_add_type_12">Other</string>
    <string-array name="dialog_add_measured_list" translatable="false">
        <item>@string/dialog_add_type_1</item>
        <item>@string/dialog_add_type_2</item>
        <item>@string/dialog_add_type_3</item>
        <item>@string/dialog_add_type_4</item>
        <item>@string/dialog_add_type_5</item>
        <item>@string/dialog_add_type_6</item>
        <item>@string/dialog_add_type_7</item>
        <item>@string/dialog_add_type_8</item>
        <item>@string/dialog_add_type_9</item>
        <item>@string/dialog_add_type_10</item>
        <item>@string/dialog_add_type_11</item>
        <item>@string/dialog_add_type_12</item>
    </string-array>
    <string name="dialog_add_cancel">CANCEL</string>
    <string name="dialog_add_add">ADD</string>
    <string name="dialog_error">Please fill all the fields.</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_edit">Edit</string>
    <string name="hello_blank_fragment" translatable="false">Fragment here.</string>
    <string name="fragment_history_snackbar_text">1 reading deleted</string>
    <string name="fragment_history_snackbar_action">UNDO</string>
    <string name="fragment_overview_last_reading">Last check:</string>
    <string name="fragment_overview_trend">Trend over past month:</string>
    <string name="fragment_overview_trend_positive">in range and healthy</string>
    <string name="fragment_overview_selector_month">Month</string>
    <string name="fragment_overview_selector_day">Day</string>
    <string name="fragment_overview_selector_week">Week</string>
    <string-array name="fragment_overview_selector">
        <item>@string/fragment_overview_selector_day</item>
        <item>@string/fragment_overview_selector_week</item>
        <item>@string/fragment_overview_selector_month</item>
    </string-array>
    <string name="fragment_overview_tip">Tip</string>
    <string name="tip_example" translatable="false">Use less cheese in your recipes and meals. Fresh mozzarella packed in water and Swiss cheese are usually lower in sodium.</string>
    <string name="preferences_about">About</string>
    <string name="version" translatable="false">0.8.3 (Noce)</string>
    <string name="preferences_version">Version</string>
    <string name="preferences_terms">Terms of use</string>
    <string name="glucose_reading_type">Type</string>
    <string name="weight">Weight</string>
    <string name="dialog_add_custom_type">Custom measurement category</string>
    <string name="alt0">DropDownDemo</string>
    <string name="alt1">A menu alt</string>
    <string name="alt2">An other alt</string>
</resources>