<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.project.healthMeter.activity.ViewForScannerActivity"
    android:id="@+id/root_id">



    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dip"
            android:weightSum="1">

            <!-- View Title Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:text="@string/foodFacts"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <!-- FirstName Label -->

            <TextView
                android:id="@+id/productName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/productName"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                android:id="@+id/patientAllergy"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/patientAllergy"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
            <TextView
                android:id="@+id/foodAllergicInfo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/foodAllergicInfo"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <!-- FirstName TextField -->

            <!-- Name Label -->

            <TextView
                android:id="@+id/foodDiseaseInfo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/foodDiseaseInfo"
                android:inputType="textMultiLine"
                android:textAppearance="?android:attr/textAppearanceMedium"/>


            <!-- FirstName TextField -->
            <TextView
                android:id="@+id/nutritionInfo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/nutritionInfo"
                android:inputType="textMultiLine"
                android:textAppearance="?android:attr/textAppearanceMedium"/>







            <!-- Error message -->

            <TextView
                android:id="@+id/register_error"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dip"
                android:textColor="#e30000"
                android:textStyle="bold" />


        </LinearLayout>

    </ScrollView>


</RelativeLayout>
