<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/helloactivity_mainframe">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:padding="10dip"
            tools:context="org.project.healthMeter.activity.LoginActivity"
            android:orientation="vertical"
            android:weightSum="1">
            <TextView android:text="@string/helloactivity_headline" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/abc_text_size_display_1_material"
                android:textColor="@color/glucosio_text_dark"
                android:paddingTop="32dp"/>
            <TextView android:text="@string/helloactivity_subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/abc_text_size_subhead_material"
                android:textColor="@color/glucosio_text"
                android:paddingTop="16dp"/>

            <TextView
                android:paddingTop="30dp"
                android:textSize="@dimen/abc_text_size_subhead_material"
                android:textColor="@color/glucosio_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/helloactivity_email"
                android:id="@+id/textView_email"
                android:layout_centerHorizontal="true"
                />

            <EditText
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter Email"
                android:focusable="true"
                android:id="@+id/editText_email"

                />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="32dp"
                android:weightSum="2">

                <TextView
                    android:paddingTop="30dp"
                    android:textSize="@dimen/abc_text_size_subhead_material"
                    android:textColor="@color/glucosio_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/helloactivity_password"
                    android:id="@+id/textview_password"
                    android:layout_centerHorizontal="true"
                    />


                <EditText
                    android:id="@+id/editText_password"
                    android:inputType="textPassword"
                    android:layout_marginTop="5dp"
                    android:layout_width="154dp"
                    android:layout_height="53dp"
                    android:focusable="true"
                    android:hint="@string/helloactivity_password"/>
                <TextView
                    android:id="@+id/login_error"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dip"
                    android:textColor="#e30000"
                    android:textStyle="bold" />
              </LinearLayout>
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/helloactivity_nextlogin"
                android:layout_height="wrap_content"
                android:text="@string/helloactivity_button_next_login"
                android:onClick="onNextClicked"
                android:textSize="25dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:textAlignment="center"
                android:layout_width="fill_parent"
                android:background="@color/glucosio_pink"
                android:textColor="#fff"

                />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/helloactivity_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Signup(New User)"
                android:onClick="onRegisterClicked"
                android:textSize="25dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                 />

            <android.support.v7.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/glucosio_pink"
                android:text="Cancel"
                android:layout_marginTop="10dp"

                android:id="@+id/button_cancel"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"/>
            />
        </LinearLayout>
    </ScrollView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/helloactivity_eulaframe"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:paddingTop="32dp"
            android:paddingBottom="32dp"
            tools:context="org.project.healthMeter.activity.LoginActivity"
            android:orientation="vertical">

            <TextView android:text="@string/helloactivity_terms" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/abc_text_size_display_1_material"
                android:textColor="@color/glucosio_text_dark"
                android:paddingTop="32dp"/>

            <TextView
                android:id="@+id/helloactivity_textview_terms"
                android:text="@string/helloactivity_terms_full"
                android:layout_width="fill_parent"
                android:layout_height="250dp"
                android:scrollbars = "vertical"
                android:textSize="@dimen/abc_text_size_subhead_material"
                android:textColor="@color/glucosio_text"
                android:paddingTop="16dp"/>

            <CheckBox
                android:id="@+id/helloactivity_checkbox_eula"
                android:layout_marginTop="32dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/helloactivity_terms_accept"/>
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/helloactivity_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/helloactivity_button_start"
                android:layout_marginTop="32dp"
                android:onClick="onStartClicked"
                android:background="@null"
                android:textColor="@color/glucosio_pink"
                android:layout_gravity="right"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
